tests/negative/neg_pr1110b_pop_last_stmt.safe
-- Test: neg_pr1110b_pop_last_stmt
-- Description: `pop_last(items)` returns an `optional T` and must be used in an
--   expression context.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110b-built-in-list-of-t
-- Expected: REJECT source_frontend_error

package neg_pr1110b_pop_last_stmt

   values : list of integer = [1, 2];

   pop_last (values);
